--- a/catalogue/templates/manifest.yaml
+++ b/catalogue/templates/manifest.yaml
@@ -1,13 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: catalogue
-  namespace: roboshop
-data:
-  MONGO: "true"
-  MONGO_URL: {{ .Values.configmap.mongoURL }}
----
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -26,17 +16,18 @@ spec:
       component: catalogue
   template:
     metadata:
-      project: roboshop
-      environment: dev
-      component: catalogue
+      labels:
+        project: roboshop
+        environment: dev
+        component: catalogue
     spec:
       containers:
       - name: catalogue
         image: "{{ .Values.deployment.imageVersion }}"
         imagePullPolicy: Always
         readinessProbe:
-         tcpSocket:
-          port: 27017
+          tcpSocket:
+            port: 27017
           initialDelaySeconds: 15
           periodSeconds: 10
         livenessProbe:
@@ -44,6 +35,7 @@ spec:
             port: 27017
           initialDelaySeconds: 15
           periodSeconds: 10
+
 ---
 apiVersion: v1
 kind: Service
