--- a/redis/templates/manifest.yaml
+++ b/redis/templates/manifest.yaml
@@ -23,7 +23,7 @@ spec:
    spec: 
     containers:
     - name: redis
-      image: "{{ Values.deployment.imageRepo }}:{{ .Values.deployment.imageVersion }}"
+      image: "{{ Values.deployment.imageRepo }}"
       imagePullPolicy: Always
       readinessProbe:
         tcpSocket:
