--- a/redis/templates/manifest.yaml
+++ b/redis/templates/manifest.yaml
@@ -15,26 +15,46 @@ spec:
       environment: dev
       component: redis
   template:
-   metadata:
-     labels:
-      project: roboshop
-      environment: dev
-      component: redis
-   spec: 
-    containers:
-    - name: redis
-      image: "{{ .Values.deployment.imageRepo }}"
-      imagePullPolicy: Always
-      readinessProbe:
-        tcpSocket:
-          port: 6379
-        initialDelaySeconds: 15
-        periodSeconds: 10
-      livenessProbe:
-        tcpSocket:
-          port: 6379
-        initialDelaySeconds: 15
-        periodSeconds: 10
+    metadata:
+      labels:
+        project: roboshop
+        environment: dev
+        component: redis
+    spec:
+      containers:
+      - name: redis
+        image: "{{ .Values.deployment.imageRepo }}"
+        imagePullPolicy: Always
+        readinessProbe:
+          tcpSocket:
+            port: 6379
+          initialDelaySeconds: 15
+          periodSeconds: 10
+        livenessProbe:
+          tcpSocket:
+            port: 6379
+          initialDelaySeconds: 15
+          periodSeconds: 10
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+  namespace: roboshop
+  labels:
+    project: roboshop
+    environment: dev
+    component: redis
+spec:
+  selector:
+    project: roboshop
+    environment: dev
+    component: redis
+  ports:
+    - protocol: TCP
+      port: 6379
+      targetPort: 6379
+
 ---
 apiVersion: v1
 kind: Service
