--- a/redis/templates/manifest.yaml
+++ b/redis/templates/manifest.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: redis
-        image: "{{ .Values.deployment.imageRepo }}"
+        image: "{{ .Values.deployment.image }}"
         imagePullPolicy: Always
         readinessProbe:
           tcpSocket:
@@ -55,24 +55,6 @@ spec:
       port: 6379
       targetPort: 6379
 
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: redis
-  namespace: roboshop
-  labels:
-     project: roboshop
-     environment: dev
-     component: redis
-spec:
-  selector:
-    project: roboshop
-    environment: dev
-    component: redis
-  ports:
-    - protocol: TCP
-      port: 6379
-      targetPort: 6379  
+
   
   
