--- a/redis/templates/manifest.yaml
+++ b/redis/templates/manifest.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: redis
-        image: "{{ .Values.deployment.image }}"
+        image: "{{ .Values.deployment.imageRepo }}:{{ .Values.deployment.imageVersion }}"
         imagePullPolicy: Always
         readinessProbe:
           tcpSocket:
