--- a/frontend/templates/manifest.yaml
+++ b/frontend/templates/manifest.yaml
@@ -1,51 +1,50 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-    name: frontend
-    namespace: roboshop
-    labels:    
-        project: roboshop
-        component: frontend
-        tier: frontend
+  name: frontend
+  namespace: roboshop
+  labels:
+    project: roboshop
+    component: frontend
+    tier: frontend
 spec:
-    replicas: "{{ .Values.deployment.replicas }}"
-    selector:
-       matchLabels:
+  replicas: {{ .Values.deployment.replicas | int }}
+  selector:
+    matchLabels:
+      project: roboshop
+      component: frontend
+      tier: frontend
+  template:
+    metadata:
+      labels:
         project: roboshop
         component: frontend
         tier: frontend
-    template:
-       metadata:
-         labels:
-          project: roboshop
-          component: frontend
-          tier: frontend
-       spec:
-        containers:
-        -  name: frontend
-           image: "{{ .Values.deployment.imageRepo }}"
-           imagePullPolicy: Always
-           ports:
-           - name: liveness-port
-             containerPort: 80
-           readinessProbe:
-            httpGet:
-              path: /
-              port: liveness-port
-            failureThreshold: 1
-            periodSeconds: 15
-           livenessProbe:
-            httpGet:
-              path: /
-              port: liveness-port
-            failureThreshold: 1
-            periodSeconds: 15
----
+    spec:
+      containers:
+      - name: frontend
+        image: "{{ .Values.deployment.imageRepo }}"
+        imagePullPolicy: Always
+        ports:
+        - name: liveness-port
+          containerPort: 80
+        readinessProbe:
+          httpGet:
+            path: /
+            port: liveness-port
+          failureThreshold: 1
+          periodSeconds: 15
+        livenessProbe:
+          httpGet:
+            path: /
+            port: liveness-port
+          failureThreshold: 1
+          periodSeconds: 15
 apiVersion: v1
 kind: Service
 metadata:
-   name: frontend
-   namespace: roboshop
+  name: frontend
+  namespace: roboshop
 spec:
   type: LoadBalancer
   selector:
@@ -54,11 +53,5 @@ spec:
     tier: frontend
   ports:
     - protocol: TCP
-      port: 80  # servcie port
-      targetPort: 80 # container   
-
-
-
-
-
-    
+      port: 80
+      targetPort: 80
