--- a/payment/templates/manifest.yaml
+++ b/payment/templates/manifest.yaml
@@ -39,7 +39,7 @@ spec:
      spec:
        containers:
         - name: payment
-          image: "{{ .Values.deployment.imageVersion }}"
+          image: "{{ .Values.deployment.imageRepo }}:{{ .Values.deployment.imageVersion }}"
           imagePullPolicy: Always
           envFrom:
           - configMapRef: 
