--- a/cart/templates/manifest.yaml
+++ b/cart/templates/manifest.yaml
@@ -34,7 +34,7 @@ spec:
     spec:
       containers:
         - name: cart
-          image: "{{ .Values.deployment.imageVersion }}"
+          image: "{{ .Values.deployment.imageRepo }}:{{ .Values.deployment.imageVersion }}"
           imagePullPolicy: Always
           envFrom:
             - configMapRef: 
