--- a/cart/values.yaml
+++ b/cart/values.yaml
@@ -1,4 +1,5 @@
 deployment:
-  imageVersion: "anilkathoju/cart:v1"
+  imageRepo: anilkathoju/cart
+  imageVersion: v1
 service:
   servicePort: 8080
