--- a/shipping/templates/manifest.yaml
+++ b/shipping/templates/manifest.yaml
@@ -33,7 +33,7 @@ spec:
      spec:
        containers:
         - name: shipping
-          image: "{{ .Values.deployment.imageVersion }}"
+          image: "{{ .Values.deployment.imageRepo }}:{{ .Values.deployment.imageVersion }}"
           imagePullPolicy: Always
           envFrom:
             - configMapRef: 
