--- a/mongodb/templates/deployment.yaml
+++ b/mongodb/templates/deployment.yaml
@@ -8,7 +8,8 @@ metadata:
     environment: dev
     component: mongodb
 spec: 
-  replicas: "{{ .Values.deployment.replicas }}"
+  #replicas: "{{ .Values.deployment.replicas }}"
+  replicas: 1
   selector:
     matchLabels: 
      project: roboshop
