--- a/mysql/temaplates/manifest.yaml
+++ b/mysql/temaplates/manifest.yaml
@@ -15,7 +15,8 @@ metadata:
   name: mysql
   namespace: roboshop
 spec:
-  replicas: "{{ .Values.deployment.replicas }}"
+  #replicas: "{{ .Values.deployment.replicas }}"
+  replicas: 1
   selector: 
     matchLabels:
       project: roboshop
