--- a/mysql/values.yaml
+++ b/mysql/values.yaml
@@ -5,5 +5,5 @@
 
  deployment:
   replicas: 1
-  imageRepo: "anilkathoju/mysql"
-  imageVersion: "v1"
+  imageRepo: anilkathoju/mysql
+  imageVersion: v1
